--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Lista Telefonica</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
@@ -14,24 +14,32 @@
 <body ng-controller="listaTelefonicaCtrl">
     <div class="jumbotron">
         <h3 ng-bind="app"></h3>
-        <table class="table table-striped">
+        <table ng-show="contatos.length > 0" class="table">
             <thead>
                 <tr>
+                    <th></th>
                     <th class="text-center">Nome</th>
                     <th class="text-center">Telefone</th>
+                    <th class="text-center">Operadora</th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="contato in contatos">
+                <tr ng-class="{selecionado: contato.selecionado}" ng-repeat="contato in contatos">
+                    <td><input type="checkbox" ng-model="contato.selecionado"/></td>
                     <td ng-bind="contato.nome"></td>
                     <td ng-bind="contato.telefone"></td>
+                    <td ng-bind="contato.operadora.nome"></td>
                 </tr>
             </tbody>
         </table>
         <hr/>
         <input class="form-control" type="text" ng-model="contato.nome" placeholder="Nome"/>
         <input class="form-control " type="text" ng-model="contato.telefone" placeholder="Telefone"/>
-        <button class="btn btn-block btn-info" ng-click="adicionarContato(contato)">Adicionar Contato</button>
+        <select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome group by operadora.categoria for operadora in operadoras">
+            <option value="">Selecione a operadora</option>
+        </select>
+        <button class="btn btn-block btn-info" ng-click="adicionarContato(contato)" ng-disabled="!contato.nome || !contato.telefone">Adicionar Contato</button>
+        <button class="btn btn-block btn-danger" ng-click="apagarContatos(contatos)" ng-show="isContatoSelecionado(contatos)">Apagar Contatos</button>
     </div>
 </body>
 </html>
