--- a/index.html
+++ b/index.html
@@ -14,43 +14,46 @@
 <body ng-controller="listaTelefonicaCtrl">
     <div class="jumbotron">
         <h3 ng-bind="app"></h3>
+        <input class="form-control" type="text" ng-model="criterioDeBusca" placeholder="O que você está buscando?"/>
         <table ng-show="contatos.length > 0" class="table">
             <thead>
                 <tr>
                     <th></th>
-                    <th class="text-center">Nome</th>
+                    <th class="text-center"><a href="" ng-click="ordenarPor('nome')">Nome</a></th>
                     <th class="text-center">Telefone</th>
                     <th class="text-center">Operadora</th>
+                    <th class="text-center">Data</th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-class="{selecionado: contato.selecionado}" ng-repeat="contato in contatos">
+                <tr ng-class="{selecionado: contato.selecionado}" ng-repeat="contato in contatos | filter: {nome: criterioDeBusca} | orderBy:criterioDeOrdenacao:direcaoDaOrdenacao">
                     <td><input type="checkbox" ng-model="contato.selecionado"/></td>
                     <td ng-bind="contato.nome"></td>
                     <td ng-bind="contato.telefone"></td>
                     <td ng-bind="contato.operadora.nome"></td>
+                    <td ng-bind="contato.data | date"></td>
                 </tr>
             </tbody>
         </table>
         <hr/>
         <form name="contatoForm">
             <input class="form-control" type="text" ng-model="contato.nome" name="nome" placeholder="Nome" ng-required="true" ng-minlength="7"/>
-            <input class="form-control " type="text" ng-model="contato.telefone" name="telefone" placeholder="Telefone" ng-required="true" ng-pattern="/^\d{10,11}$/"/>
+            <input class="form-control " type="text" ng-model="contato.telefone" name="telefone" placeholder="ex. (11) 99999-9999" ng-required="true" ng-pattern="/^\d{10,11}$/"/>
             <select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome group by operadora.categoria for operadora in operadoras">
                 <option value="">Selecione a operadora</option>
             </select>
         </form>
         <div ng-show="contatoForm.nome.$error.required && contatoForm.nome.$dirty" class="alert alert-danger">
-            Preencha o nome!
+            Preencha o nome.
         </div>
         <div ng-show="contatoForm.nome.$error.minlength" class="alert alert-danger">
-            O nome deve ter no mínimo 7 caracteres!
+            O nome deve ter no mínimo 7 caracteres.
         </div>
         <div ng-show="contatoForm.telefone.$error.required && contatoForm.telefone.$dirty" class="alert alert-danger">
-            Preencha o telefone!
+            Preencha o telefone.
         </div>
         <div ng-show="contatoForm.telefone.$error.pattern" class="alert alert-danger">
-            Preencha corretamente o telefone com DDD!
+            Preencha corretamente o telefone com DDD.
         </div>
         <button class="btn btn-block btn-info" ng-click="adicionarContato(contato)" ng-disabled="contatoForm.$invalid">Adicionar Contato</button>
         <button class="btn btn-block btn-danger" ng-click="apagarContatos(contatos)" ng-show="isContatoSelecionado(contatos)">Apagar Contatos</button>
